# starfall-chatterbox-bridge

./: .gitignore  LICENSE  README.md  run.bat  run.sh  starfall-tts-v3.txt
server/: requirements.txt
server/chatterbox/: pyproject.toml
server/chatterbox/src/chatterbox/: mtl_tts.py  tts.py  vc.py
server/chatterbox/src/chatterbox/models/t3/: t3_cuda_graphs.py
server/chatterbox/src/chatterbox/models/tokenizers/: tokenizer.py
server/src/: caching.py  config.py  logger.py  main.py  sox.py  terman.py  textify.py  wss.py
server/src/backends/: chatterbox.py  tiktok.py
