[project]
name = "chatterbox-tts"
version = "0.2.1"
description = "Chatterbox: Open Source TTS and Voice Conversion by Resemble AI"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
    {name = "resemble-ai", email = "engineering@resemble.ai"}
]
dependencies = [
    "numpy",
    "resampy==0.4.3",
    "librosa",
    "s3tokenizer",
    "torch",
    "torchaudio",
    "transformers",
    "diffusers",
    "omegaconf",
    "conformer",
    "safetensors",
    "spacy-pkuseg",
    "pykakasi==2.3.0",
]

[project.urls]
Homepage = "https://github.com/resemble-ai/chatterbox"
Repository = "https://github.com/resemble-ai/chatterbox"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
